--- a/src/app/pages/inicio/pantalla-inicio/pantalla-inicio.component.html
+++ b/src/app/pages/inicio/pantalla-inicio/pantalla-inicio.component.html
@@ -38,4 +38,8 @@
         </span>
     </button>
 </div>
+<div class="flex justify-center">
+    <app-carousel [items]="productosList" [title]="title" [typeCard]="typeCard" />
+</div>
+
 
