--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,1 +1,11 @@
-<p>product-card works!</p>
+<div class="w-60 h-full shadow-md flex flex-col rounded-lg">
+    <img class="w-60 h-56 object-cover rounded-t-lg" [src]="imgProducto">
+    <div class="p-3 h-44 grid grid-rows-[60%_40%]">
+        <div class="place-content-center">
+            <p class="text-center uppercase font-semibold">{{nombreProducto}}</p>
+            <p class="text-center text-[12.8px] font-medium">Precio desde</p>
+            <p class="text-center text-[12.8px] font-medium">S/ {{precioProducto}}</p>
+        </div>
+        <button class="font-semibold p-1 mt-4 border border-red-700 rounded-2xl text-red-700 hover:bg-red-300">AGREGAR</button>
+    </div>
+</div>
