--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -6,6 +6,6 @@
             <p class="text-center text-[12.8px] font-medium">Precio desde</p>
             <p class="text-center text-[12.8px] font-medium">S/ {{precioProducto}}</p>
         </div>
-        <button class="font-semibold p-1 mt-4 border border-red-700 rounded-2xl text-red-700 hover:bg-red-300">AGREGAR</button>
+        <button (click)="agregarProducto(producto)" class="font-semibold p-1 mt-4 border border-red-700 rounded-2xl text-red-700 hover:bg-red-300">AGREGAR</button>
     </div>
 </div>
