--- a/src/app/pages/inicio/layout-inicio/header/header.component.html
+++ b/src/app/pages/inicio/layout-inicio/header/header.component.html
@@ -2,7 +2,7 @@
   class="bg-white dark:bg-gray-900 fixed w-full z-40 top-0 start-0 border-b border-gray-200 dark:border-gray-600"
 >
   <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2"
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2 relative"
   >
     <div class="flex gap-3">
       <a
@@ -56,6 +56,7 @@
         INGRESA O REGÍSTRATE
       </button>
       <button
+        (click)="toggle()"
         type="button"
         class="text-red-700  focus:outline-none font-medium rounded-lg text-sm  text-center"
       >
@@ -96,5 +97,6 @@
       </div>
       <input type="text" id="search-navbar" class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-xl bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
     </div>
+    <app-cantidad-productos/>
   </div>
 </nav>
