--- a/src/app/pages/inicio/layout-inicio/layout-inicio.component.html
+++ b/src/app/pages/inicio/layout-inicio/layout-inicio.component.html
@@ -1,8 +1,9 @@
 <div class="grid min-h-screen grid-rows-[auto_1fr_auto]">
-    <app-header/>
-    <div class ="mt-[73px]">
+    <app-header (toggleCarrito)="toggleCarrito()"/>
+    <div [ngClass]="{'modal-derecha': isClose, 'modal-izquierda': !isClose}" class ="mt-[73px]">
         <router-outlet />
     </div>
+    <app-carrito (close)="toggleCarrito()" [isOpen]="isClose" />
     <app-footer/>
 </div>
 
