--- a/src/app/pages/dashboard/layout-dashboard/layout-dashboard.component.html
+++ b/src/app/pages/dashboard/layout-dashboard/layout-dashboard.component.html
@@ -1,1 +1,6 @@
-<p>layout-dashboard works!</p>
+<div class="flex">
+    <app-sidebar-dashboard/>
+    <div class="w-full  flex justify-center">
+        <router-outlet/>
+    </div>
+</div>
