--- a/src/app/pages/inicio/layout-inicio/footer/footer.component.html
+++ b/src/app/pages/inicio/layout-inicio/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer class="bg-white dark:bg-gray-900">
-    <div class="container p-6 mx-auto">
+    <div class="container2 p-6 mx-auto">
         <div class="lg:flex">
             <div class="w-full -mx-6 lg:w-2/5">
                 <div class="px-6">
                     <a href="#">
-                        <img class="w-auto h-7" src="https://merakiui.com/images/full-logo.svg" alt="">
+                        <img class="w-auto h-16" src="logo-pollon.png" alt="">
                     </a>
 
-                    <p class="max-w-sm mt-2 text-gray-500 dark:text-gray-400">Join 31,000+ other and never miss out on new tips, tutorials, and more.</p>
+                    <p class="max-w-sm mt-2 text-gray-500 dark:text-gray-400">Disfruta el sabor de nuestra tradición.</p>
 
                     <div class="flex mt-6 -mx-2">
                         <a href="#"
@@ -44,32 +44,25 @@
             </div>
 
             <div class="mt-6 lg:mt-0 lg:flex-1">
-                <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+                <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 ">
                     <div>
-                        <h3 class="text-gray-700 uppercase dark:text-white">About</h3>
-                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Company</a>
-                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">community</a>
+                        <h3 class="text-gray-700 uppercase dark:text-white">SOBRE NOSOTROS</h3>
+                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Compañia</a>
+                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Comunidad</a>
                         <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Careers</a>
                     </div>
 
                     <div>
-                        <h3 class="text-gray-700 uppercase dark:text-white">Blog</h3>
-                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Tec</a>
-                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Music</a>
-                        <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Videos</a>
-                    </div>
-
-                    <div>
-                        <h3 class="text-gray-700 uppercase dark:text-white">Products</h3>
+                        <h3 class="text-gray-700 uppercase dark:text-white">Productos</h3>
                         <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Mega cloud</a>
                         <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Aperion UI</a>
                         <a href="#" class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">Meraki UI</a>
                     </div>
 
                     <div>
-                        <h3 class="text-gray-700 uppercase dark:text-white">Contact</h3>
-                        <span class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">+1 526 654 8965</span>
-                        <span class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">example&#64;email.com</span>
+                        <h3 class="text-gray-700 uppercase dark:text-white">Contacto</h3>
+                        <span class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">+51 926 654 895</span>
+                        <span class="block mt-2 text-sm text-gray-600 dark:text-gray-400 hover:underline">elpollonrestaurante&#64;gmail.com</span>
                     </div>
                 </div>
             </div>
