--- a/src/app/pages/inicio/layout-inicio/layout-inicio.component.html
+++ b/src/app/pages/inicio/layout-inicio/layout-inicio.component.html
@@ -1,8 +1,11 @@
-<div class="grid min-h-screen grid-rows-[auto_1fr_auto]">
+<div class="grid min-h-screen grid-rows-[auto_auto_auto]">
     <app-header (toggleCarrito)="toggleCarrito()"/>
-    <div [ngClass]="{'modal-derecha': isClose, 'modal-izquierda': !isClose}" class ="mt-[73px]">
+    <div [ngClass]="{'modal-derecha': isClose, 'modal-izquierda': !isClose}" class ="mt-[73px] min-h-[calc(100vh-73px)]">
         <router-outlet />
     </div>
+    @if (isClose) {
+        <div (click)="toggleCarrito()" class="fixed w-full h-full bg-black opacity-70"></div>
+    }
     <app-carrito (close)="toggleCarrito()" [isOpen]="isClose" />
     <app-footer/>
 </div>
