--- a/src/app/pages/dashboard/productos/productos.component.html
+++ b/src/app/pages/dashboard/productos/productos.component.html
@@ -1,1 +1,19 @@
-<p>productos works!</p>
+<div class="w-full h-full p-5">
+    <div class="flex justify-between items-center">
+        <div>
+            <p class="text-3xl font-bold">{{title}}</p>
+            <p class="text-sm mb-2">{{description}}</p>
+        </div>
+        <button (click)="toggleCreateSidebar()" class="bg-red-800 text-white font-bold px-6 py-2 flex items-center rounded-md gap-2">
+            <i class='bx bx-plus font-bold text-lg'></i>
+            Agregar
+        </button>
+    </div>
+    <app-table-action [titulo]="title" [data]="productosFiltrados" [columns]="columnas" [nombreColumns]="nombreColumnas"  (action)="onAction($event)"></app-table-action>
+    @if (isCreate) {
+        <app-form-agregar-producto (productoNuevo)="actualizarListaProducto($event)" ></app-form-agregar-producto>
+    }
+    @if (isEdit) {
+        <app-form-editar-producto [productoEditar]="productoEditar" (productoEditado)="actualizarProducto($event)"></app-form-editar-producto>
+    }
+</div>
