--- a/src/app/pages/inicio/carta/carta.component.html
+++ b/src/app/pages/inicio/carta/carta.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full grid grid-cols-[15%_85%]">
+<div class="w-full h-full grid grid-cols-[15%_85%] relative">
     <div class="pt-5 pl-8">
         <h2 class="font-semibold text-3xl text-red-700">Filtros</h2>
         <ul>
@@ -17,4 +17,5 @@
             }
         </div>
     </div>
+    
 </div>
