--- a/src/app/shared/components/category-card/category-card.component.html
+++ b/src/app/shared/components/category-card/category-card.component.html
@@ -1,9 +1,8 @@
-<div class="w-56 shadow-md flex flex-col rounded-lg">
-    <img class="w-56 h-48 object-cover rounded-t-lg" [src]="imgProducto">
-    <div class="p-4 h-44 grid grid-rows-[60%_40%]">
+<div (click)="openCategory(categoria.nombre)" class="relative cursor-pointer w-96 shadow-md flex flex-col rounded-lg" id="cardCategoria">
+    <img class="w-96 h-80 object-cover rounded-lg" [src]="categoria.urlImg">
+    <div class="py-2 w-80 rounded-md  bg-red-700 text-white absolute">
         <div class="place-content-center">
-            <p class="text-center uppercase font-semibold">{{nombreProducto}}</p>
+            <p class="text-center uppercase font-semibold">{{categoria.nombre}}</p>
         </div>
-        <button class="font-semibold p-1 mt-4 border border-red-700 rounded-2xl text-red-700 hover:bg-red-300">AGREGAR</button>
     </div>
 </div>
