--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,10 +1,12 @@
-<div class="w-60 h-full shadow-md flex flex-col rounded-lg">
-    <img class="w-60 h-56 object-cover rounded-t-lg" [src]="imgProducto">
-    <div class="p-3 h-44 grid grid-rows-[60%_40%]">
+<div (click)="agregarProducto(producto)" class="border-[#d8d8d8] overflow-hidden border w-64 h-full shadow-lg flex flex-col rounded-lg cursor-pointer" id="product">
+    <div class="w-64 h-64 overflow-hidden rounded-t-lg">
+        <img class="w-full h-full object-cover rounded-t-lg overflow-hidden" id="imgProduct" [src]="producto.urlImg">
+    </div>
+    <div class="p-3 w-64 h-44 grid grid-rows-[60%_40%]">
         <div class="place-content-center">
-            <p class="text-center uppercase font-semibold">{{nombreProducto}}</p>
+            <p class="text-center uppercase font-semibold">{{producto.nombre}}</p>
             <p class="text-center text-[12.8px] font-medium">Precio desde</p>
-            <p class="text-center text-[12.8px] font-medium">S/ {{precioProducto}}</p>
+            <p class="text-center text-[12.8px] font-medium">S/ {{producto.precio}}</p>
         </div>
         <button (click)="agregarProducto(producto)" class="font-semibold p-1 mt-4 border border-red-700 rounded-2xl text-red-700 hover:bg-red-300">AGREGAR</button>
     </div>
